Bug 416389 - When in "All tags" section, information panel shows a dot below its icon instead of "All tags" text
Summary: When in "All tags" section, information panel shows a dot below its icon inst...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 21.08.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-17 19:14 UTC by Patrick Silva
Modified: 2022-01-25 10:51 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04
Sentry Crash Report:


Attachments
screenshot (96.65 KB, image/png)
2020-01-17 19:14 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-01-17 19:14:05 UTC
Created attachment 125204 [details]
screenshot

SUMMARY
when we tag a file, a new section called "Tags" appears in places panel.
If we click on "All tags" entry under "Tags" section, information panel shows a dot
below its icon instead of "All tags" text.

STEPS TO REPRODUCE
1. right click on any file > assign tags > create new...
2. type any tag and click on "Ok" button (if "Tags" section does not appear in places panel, restart Dolphin)
3. click on "All tags" entry under "Tags" section of places panel

OBSERVED RESULT
as we can see in the attached screenshot, information panel shows a dot below its icon

EXPECTED RESULT
information panel should show "All tags" text below its icon

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.0

 
ADDITIONAL INFORMATION
it seems related to bug 414345
Comment 1 Méven Car 2020-08-11 07:04:42 UTC
That's a baloo tags:// ioslave issue.
Comment 2 Bug Janitor Service 2021-12-18 19:31:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/baloo/-/merge_requests/72
Comment 3 Nicolas Fella 2021-12-20 15:34:26 UTC
Git commit 71303eabea5816904a046f509bcb2a36fb690ff4 by Nicolas Fella.
Committed on 18/12/2021 at 19:31.
Pushed by nicolasfella into branch 'master'.

[kioslaves/tags] Set proper display name for root entry

Instead of setting '.' set 'All Tags'

M  +14   -10   src/kioslaves/tags/kio_tags.cpp

https://invent.kde.org/frameworks/baloo/commit/71303eabea5816904a046f509bcb2a36fb690ff4
Comment 4 tagwerk19 2022-01-25 10:51:23 UTC
Maybe a connection to Bug 449126 ...

... Dolphin "All Tags" Panel shows incorrect Tag Display names