[kioslaves/tags] Set proper display name for root entry

Instead of setting '.' set 'All Tags'

BUG: 416389